# onnx

./: .gitignore  CMakeLists.txt  example.onnx
include/: attribute.hpp  common.hpp  file.h  io.hpp  model.hpp  node.hpp  tensor.hpp
include/core/: file.h
include/onnx/: attribute.hpp  model.hpp  node.hpp  stream.hpp  tensor.hpp
models/: test.onnx
src/: attribute.cpp  common.cpp  io.cpp  main.cpp  model.cpp  node.cpp  stream.cpp  tensor.cpp
